# my-claw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  PROTOCOL_COST_EFFICIENCY.md  README.md  USER.md  openclaw.config.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
assistant/: __init__.py  agent_runtime.py  commands.py  commands_help.json  config.py  db.py  main.py  models.py  scheduler.py  signal_adapter.py  telegram_adapter.py
assistant/llm/: base.py  openrouter.py
assistant/tools/: __init__.py  base.py  citation_tracker_tool.py  ddg_search_tool.py  get_meal_summary_tool.py  magazine_tool.py  meal_tracker.py  memory_tool.py  notes_tool.py  podcast_tool.py  price_tracker_tool.py  read_url_tool.py  registry.py  search_tool.py  time_tool.py  web_search_tool.py
docs/: LEARNINGS.md  README.md  walkthrough.md
docs/superpowers/plans/: 2026-03-15-trackmeal.md
docs/superpowers/specs/: 2026-03-15-trackmeal-design.md
learnings/: LEARNINGS.md
memory/: README.md
tests/: test_agent_runtime.py  test_commands.py  test_config.py  test_db.py  test_ddg_search_tool.py  test_get_meal_summary_tool.py  test_magazine_tool.py  test_meal_tracker.py  test_memory_search_tools.py  test_openrouter.py  test_podcast_tool.py  test_price_tracker_tool.py  test_read_url_tool.py  test_telegram_adapter.py  test_tools.py  test_web_search_tool.py
