[project]
name = "my-claw"
version = "0.1.0"
description = "Personal Signal AI assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=0.1.0",
    "google-cloud-bigquery>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "tejas-config",
    "pymupdf>=1.24.0",
    "openai-agents>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
claw = "assistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[tool.uv.sources]
tejas-config = { path = "../tejas-config", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
